--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ def load_user(user_id):
                 <div class="image-gallery">
                     <div>
                         <p>메인페이지</p>
-                        <img src="data/게.png" alt="메인페이지 이미지" class="gallery-item" loading="lazy">
+                        <img src="data/게시판.png" alt="메인페이지 이미지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>로그인 페이지</p>
@@ -343,6 +343,6 @@ cv2.destroyAllWindows()
     </div>
 
     <!-- JavaScript -->
-    <script src="포트폴리오_작성데이터/style/style.js"></script>
+    <script src="style/style.js"></script>
 </body>
 </html>
