--- a/index.html
+++ b/index.html
@@ -77,24 +77,24 @@ def load_user(user_id):
                 <div class="image-gallery">
                     <div>
                         <p>메인페이지</p>
-                        <img src="data/게시판.png" alt="메인페이지 이미지" class="gallery-item" loading="lazy">
+                        <img src="data/board_main.png" alt="메인페이지 이미지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>로그인 페이지</p>
-                        <img src="data/로그인.png" alt="로그인 페이지 이미지" class="gallery-item" loading="lazy">
+                        <img src="data/login_page.png" alt="로그인 페이지 이미지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>회원가입 페이지</p>
-                        <img src="data/회원가입.png" alt="회원가입 페이지 이미지" class="gallery-item" loading="lazy">
+                        <img src="data/register_page.png" alt="회원가입 페이지 이미지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>게시글 작성 페이지</p>
-                        <img src="/data/글작성.png" alt="게시글 작성 페이지 이미지" class="gallery-item" loading="lazy">
+                        <img src="/data/write_post.png" alt="게시글 작성 페이지 이미지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p style="font-size: 15px;">게시글 페이지 영상 업로드 및 재상 영상</p>
                         <video class="gallery-item" muted aria-label="게시글 페이지 동영상" loading="lazy">
-                            <source src="data/게시글.mov" type="video/mp4">
+                            <source src="data/post_video.mov" type="video/mp4">
                             동영상이 지원되지 않습니다.
                         </video>
                     </div>
@@ -203,11 +203,11 @@ def edit_stock(id):
                 <div class="image-gallery">
                     <div>
                         <p>주식 추가 페이지</p>
-                        <img src="data/주식추가.png" alt="주식 추가 페이지" class="gallery-item" loading="lazy">
+                        <img src="data/add_stock.png" alt="주식 추가 페이지" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>주식 시각화 페이지</p>
-                        <img src="data/주식시각화.png" alt="주식 시각화 페이지" class="gallery-item" loading="lazy">
+                        <img src="data/visualize_stock.png" alt="주식 시각화 페이지" class="gallery-item" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -305,24 +305,24 @@ cv2.destroyAllWindows()
                 <div class="image-gallery">
                     <div>
                         <p>로그인</p>
-                        <img src="data/로그인(가림).png" alt="로그인 화면" class="gallery-item" loading="lazy">
+                        <img src="data/login_hidden.png" alt="로그인 화면" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>회원가입</p>
-                        <img src="data/회원가입(포트홀).png" alt="회원가입 화면" class="gallery-item" loading="lazy">
+                        <img src="data/register_pothole.png" alt="회원가입 화면" class="gallery-item" loading="lazy">
                     </div>
                     <div>
                         <p>로그인</p>
-                        <img src="data/로그인(노출).png" alt="로그인 화면" class="gallery-item" loading="lazy">
+                        <img src="data/login_visible.png" alt="로그인 화면" class="gallery-item" loading="lazy">
                     </div>
 
                     <div>
                         <p>대시보드</p>
-                        <img src="data/포트홀대쉬보드.png" alt="대시보드 화면" class="gallery-item" loading="lazy">
+                        <img src="data/pothole_dashboard.png" alt="대시보드 화면" class="gallery-item" loading="lazy">
                     </div>
                     <p style="font-size: 20px;">객체 인식 모델 실행 영상</p>
                     <video class="gallery-item" muted aria-label="객체 인식 모델 실행 영상" loading="lazy">
-                        <source src="data/모델_작동_객체인식_영상.mov" type="video/mp4">
+                        <source src="data/model_detection.mov" type="video/mp4">
                         동영상이 지원되지 않습니다.
                     </video>
                 </div>
